crates/etl-api/src/data/snapshots/etl_api__data__sources__tests__source_config_json_encryption.snap
---
source: crates/etl-api/src/data/sources.rs
expression: config_in_db
---
{
  "host": "localhost",
  "name": "postgres",
  "password": "[password]",
  "port": 5432,
  "username": "postgres"
}
