crates/etl-api/src/data/snapshots/etl_api__data__sources__tests__source_config_json_serialization.snap
---
source: crates/etl-api/src/data/sources.rs
expression: config
---
{
  "host": "localhost",
  "port": 5432,
  "name": "postgres",
  "username": "postgres",
  "password": "postgres"
}
